# nova-multisig

./: README.md  package.json  test-multisig-info.ts  test-withdraw.ts
programs/squads_multisig_program/: Cargo.toml  README.md
programs/squads_multisig_program/src/: lib.rs
sdk/multisig/idl/: nova_multisig_program.json
sdk/rs/: Cargo.toml  README.md
sdk/rs/src/: client.rs
sdk/rs/src/vault_transaction/: compiled_keys.rs  vault_transaction_message.rs
tests/nextjs/: package-lock.json
tests/nextjs/app/: page.tsx
