[package]
name = "nova-multisig-program"
version = "0.1.0"
description = "Nova Shield fork of Squads Multisig Program V4"
edition = "2021"
license = "AGPL-3.0"
homepage = "https://nshield.org"
authors = ["Nova Shield <hi@nshield.org>"]
repository = "https://github.com/NovaShieldWallet/nova-multisig"
documentation = "https://github.com/NovaShieldWallet/nova-multisig"
keywords = ["solana", "multisig", "anchor", "nova", "blockchain"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "squads_multisig_program"

[features]
default = ["custom-heap"]
custom-heap = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
testing = []

[dependencies]
anchor-lang = { version = "=0.29.0", features = ["allow-missing-optionals"] }
anchor-spl = { version="=0.29.0", features=["token"] }
solana-program = "1.17.4"
solana-security-txt = "1.1.1"