[package]
name = "nova-multisig"
version = "0.1.0"
description = "Nova Shield fork of Squads Protocol v4 - An SDK for building automated multisig programs on Solana"
edition = "2021"
license = "AGPL-3.0"
homepage = "https://nshield.org"
authors = ["Nova Shield <hi@nshield.org>", "Valentin Madrid <valentin@incility.com>"]
repository = "https://github.com/NovaShieldWallet/nova-multisig"
documentation = "https://github.com/NovaShieldWallet/nova-multisig"
keywords = ["solana", "multisig", "anchor", "nova", "squads"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
exclude = ["target/", ".git/"]

[lib]
name = "squads_multisig"

[dependencies]
futures = { version = "0.3.28", features = ["async-await", "alloc"] }
squads-multisig-program = { path = "../../programs/squads_multisig_program", package = "nova-multisig-program", features = ["cpi", "no-entrypoint"], version = "0.1.0" }
solana-client = "1.17.4"
thiserror = "1.0.48"

[features]
default = []
